# search-plugins

./: .gitattributes  .gitignore  .travis.yml  PublicPluginDownloader.py  README.md  python  sktorrent.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy_wiki.yaml
nova/engines/: btdb.py  demonoid.py  eztv.py  jackett.py  leetx.py  legittorrents.py  limetorrents.py  piratebay.py  rarbg.py  torlock.py  torrentscsv.py  versions.txt  zooqle.py
nova3/: README.md  justfile  pyproject.toml  requirements_dev.txt
nova3/_aux/: fetch_aux.sh
nova3/aux/: fetch_aux.sh
nova3/engines/: academictorrents.py  btbit.py  btdb.py  demonoid.py  eztv.py  hydracker.py  ilcorsaronero.py  jackett.py  leetx.py  legittorrents.py  limetorrents.py  oxtorrent.py  piratebay.py  pornrips.py  prowlarr.py  rarbg.py  solidtorrents.py  sukebeinyaasi.py  torlock.py  torrentproject.py  torrentscsv.py  versions.txt  whats_my_ip.py  zooqle.py
nova3/tests/: test_eztv.py  test_jackett.py  test_limetorrents.py  test_piratebay.py  test_solidtorrents.py  test_torlock.py  test_torrentproject.py  test_torrentscsv.py
src/: sktorrent.py
wiki/: Home.md  How-to-configure-Jackett-plugin.md  How-to-write-a-search-plugin.md  Install-search-plugins.md  New-Torznab-search-engine.md  Request-unofficial-search-plugin.md  Unofficial-search-plugins-wiki.git.mediawiki  Unofficial-search-plugins.mediawiki  https:--raw.githubusercontent.com-qbittorrent-search‐plugins-master-nova3-engines-jackett.py.md  search-engine-qbtrnt.md
